init add goods